--- a/index.html
+++ b/index.html
@@ -2,29 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">  
-    <title>Quiz app</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>quiz app</title>
+
 </head>
 <body>
-    <div class="logo">
-        <img src="./images/logo.png" width="500px">
-    </div>
-    <div class="container">
-        <div id="question-container" class="hide">
-            <div id="question">Question</div>
-            <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+    <div class="container ">
+        <div class="overlay"> </div>
+        <div class="logo">
+            <img src="./images/logo.png" alt="">
+        </div>
+        <main>
+            <div class="iniciar">
+                <button>Iniciar</button>
+             </div>
+            
+            <div class="respostas hide">
+                <h1>coloque a sua pergunta</h1>
+                <div>
+                    <button class="btn">questão</button>
+                    <button class="btn">questão</button>
+                </div>
+                <div>
+                    <button class="btn">questão</button>
+                    <button class="btn">questão</button>
+                </div>
             </div>
-        </div>
-        <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
+            <div class="next hide">
+                <button>Next</button>
+             </div>
+        </main>
+        <div class="overlay">
+            
         </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
