--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>quiz app</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="overlay"></div>
+      <div class="logo">
+        <img src="./images/logo.png" alt="" />
+      </div>
+      <main>
+        <div class="iniciar">
+          <button>Iniciar</button>
+        </div>
 
-</head>
-<body>
-    <div class="container ">
-        <div class="overlay"> </div>
-        <div class="logo">
-            <img src="./images/logo.png" alt="">
+        <div class="respostas hide">
+          <h1>coloque a sua pergunta</h1>
+          <div>
+            <button class="btn">questão</button>
+            <button class="btn">questão</button>
+          </div>
+          <div>
+            <button class="btn">questão</button>
+            <button class="btn">questão</button>
+          </div>
         </div>
-        <main>
-            <div class="iniciar">
-                <button>Iniciar</button>
-             </div>
-            
-            <div class="respostas hide">
-                <h1>coloque a sua pergunta</h1>
-                <div>
-                    <button class="btn">questão</button>
-                    <button class="btn">questão</button>
-                </div>
-                <div>
-                    <button class="btn">questão</button>
-                    <button class="btn">questão</button>
-                </div>
-            </div>
-            <div class="next hide">
-                <button>Next</button>
-             </div>
-        </main>
-        <div class="overlay">
-            
+        <div class="next hide">
+          <button>Next</button>
         </div>
+      </main>
+      <div class="overlay"></div>
     </div>
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
